<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:elevation="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_b"
                style="@style/Widget.App.Button.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:text="MovieGuide"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/back_b"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/header_container"
        android:paddingBottom="64dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/banner_iv"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@tools:sample/backgrounds/scenic"
                android:visibility="invisible"/>

            <ProgressBar
                android:id="@+id/loading_image_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="48dp"
                android:paddingVertical="64dp"
                android:translationZ="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/banner_iv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/banner_iv" />

            <TextView
                android:id="@+id/rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/releasedate_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_tv" />

            <TextView
                android:id="@+id/summary_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/summary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_tv" />

            <TextView
                android:id="@+id/summary_content_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/summary_tv"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/body"
                tools:text="Duis luctus vehicula diam. Quisque scelerisque id odio ac posuere. Fusce ultrices venenatis purus. Fusce luctus mauris id turpis pulvinar, laoreet vestibulum erat varius. Fusce quis pharetra leo, eget vulputate ligula. Pellentesque ut tellus at sapien pellentesque cursus eu quis urna. Vivamus aliquam egestas eros, eu tempus felis placerat at. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer est elit, volutpat ac fringilla at, posuere vitae ipsum. Aenean finibus sagittis nunc quis bibendum."
                android:padding="16dp"/>

            <TextView
                android:id="@+id/trailers_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/trailers"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/summary_content_tv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trailers_rv"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/trailers_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/reviews_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/reviews"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trailers_rv" />

            <TextView
                android:id="@+id/no_reviews_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_reviews_have_been_submitted_yet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviews_tv"
                android:layout_margin="16dp"
                android:visibility="invisible"/>

            <LinearLayout
                android:id="@+id/reviews_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/reviews_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/layout_border"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviews_rv"
                    android:layout_height="400dp"
                    android:layout_width="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_margin="2dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>